# cuvis-ai-adaclip

./: .gitattributes  .gitignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  codecov.yml  config.py  loss.py  pyproject.toml  pytest.ini  test.py  train.py
.githooks/: pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
adaclip_tools/: csv_tools.py  logger.py  metrics.py  training_tools.py  visualization.py
configs/pipeline/: adaclip_baseline.yaml  adaclip_cir_false_color.yaml  adaclip_cir_false_color_optimal_threshold.yaml  adaclip_cir_false_rg_color.yaml  adaclip_high_contrast.yaml  adaclip_supervised_cir.yaml  adaclip_supervised_full_spectrum.yaml  adaclip_supervised_windowed_false_rgb.yaml
configs/plugins/: cuvis_ai_dataloader.yaml
configs/trainrun/: concrete_adaclip.yaml  drcnn_adaclip.yaml  finetune_adaclip.yaml  lentils_concrete_adaclip.yaml  lentils_drcnn_adaclip.yaml  pca_adaclip_baseline.yaml
cuvis_ai_adaclip/: __init__.py  adaclip_upstream.py  cli_utils.py  weights.py
cuvis_ai_adaclip/examples_cuvis/: README.md  statistical_adaclip_channel_selector.py  statistical_baseline.py  statistical_cir_false_color copy.py  statistical_cir_false_color.py  statistical_cir_false_color_optimal_threshold.py  statistical_cir_false_color_two_stage.py  statistical_cir_false_rg_color.py  statistical_high_contrast.py  statistical_supervised_cir.py  statistical_supervised_full_spectrum.py  statistical_supervised_windowed_false_rgb.py
cuvis_ai_adaclip/examples_cuvis/experiments/: analyze_thresholds.py  cir_false_optimal_threshold_all_frames.py  two_stage_threshold_learning.py
cuvis_ai_adaclip/node/: __init__.py  adaclip_node.py  losses.py
data_preprocess/: br35h.py  brain_mri.py  btad.py  clinicdb.py  colondb.py  dagm-pre.py  dagm.py  dtd.py  endo.py  headct-pre.py  headct.py  isic.py  mpdd.py  mvtec.py  sdd-pre.py  sdd.py  tn3k.py  visa.py
dataset/: __init__.py  base_dataset.py  br35h.py  brain_mri.py  btad.py  clinicdb.py  colondb.py  dagm.py  dtd.py  headct.py  isic.py  mpdd.py  mvtec.py  sdd.py  tn3k.py  visa.py
examples/adaclip/: concrete_adaclip_gradient_training.py  drcnn_adaclip_gradient_training.py  finetune_adaclip_cir.py  finetune_adaclip_common.py  finetune_adaclip_concrete.py  finetune_adaclip_rgb.py  lentils_concrete_gradient_training.py  lentils_drcnn_gradient_training.py  pca_adaclip_baseline.py
examples/statistical/: README.md  statistical_baseline.py  statistical_cir_false_color.py  statistical_cir_false_color_optimal_threshold.py  statistical_cir_false_color_two_stage.py  statistical_cir_false_rg_color.py  statistical_supervised_cir.py  statistical_supervised_full_spectrum.py
examples/statistical/experiments/: analyze_thresholds.py  cir_false_optimal_threshold_all_frames.py
method/: __init__.py  adaclip.py  clip_model.py  custom_clip.py  simple_tokenizer.py  tokenizer.py  trainer.py  transformer.py
tests/: test_adaclip.py  test_cli_utils.py  test_cuvis_ai_adaclip.py  test_plugin_losses.py  test_preprocessing.py  test_weights.py
