[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis-ai-adaclip"
dynamic = ["version"]
description = "AdaCLIP (ECCV 2024) with a cuvis.ai-compatible plugin package."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
authors = [
    { name = "Cubert GmbH, Ulm, Germany", email = "cuvis.ai@cubert-gmbh.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    # cuvis-ai-core provides the torch / torchvision / numpy stack, the Node base
    # class, and the plugin system. The cuvis-ai node catalog is NOT needed here.
    "cuvis-ai-core>=0.8.0",
    "cuvis-ai-schemas>=0.6.0",
    # Extra dependencies specific to AdaCLIP usage that are not guaranteed by cuvis-ai-core.
    # Note: Some dependencies like numpy and scikit-image are provided by cuvis-ai-core.
    # Torch/torchvision are aligned with cuvis-ai-core (>=2.9.1, pytorch-cu128).
    # AdaCLIP's CLIP backbone + HuggingFace stack — previously pulled in transitively
    # via the cuvis-ai node catalog; now declared explicitly (the catalog was dropped).
    "open-clip-torch",
    "transformers",
    "huggingface-hub",
    "tqdm",
    "tensorboard",
    "opencv-python",
    "scikit-learn",
    "matplotlib",
    "ftfy",
    "seaborn",
    "regex",
    "gradio",
    "torchaudio",
    "click", # For CLI interface
    "pandas>=2.3.0",
    # Used by cuvis_ai_adaclip.weights to fetch model weights from Google Drive.
    "gdown",
]

[project.optional-dependencies]
examples = [
    # cuvis-ai 0.9.0 dropped the cuvis SDK dependency, so the examples pull no SDK.
    "cuvis-ai>=0.9.0",
    "loguru",
]
dev = [
    "ipython",
    "pytest",
    "pytest-cov",
    "ruff",
    "interrogate>=1.5.0",
    "twine>=6.2.0",
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0",
    "detect-secrets>=1.4.0",
    "pip-licenses>=4.0.0",
    "cyclonedx-bom>=4.0.0",
]

[project.urls]
Homepage = "https://www.cubert-hyperspectral.com/"
Repository = "https://github.com/cubert-hyperspectral/cuvis-ai-adaclip"
Issues = "https://github.com/cubert-hyperspectral/cuvis-ai-adaclip/issues"
Changelog = "https://github.com/cubert-hyperspectral/cuvis-ai-adaclip/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["loss"]

[tool.setuptools.packages.find]
include = ["method*", "dataset*", "adaclip_tools*", "cuvis_ai_adaclip*", "model_configs*"]

[tool.setuptools.package-data]
method = ["*.txt.gz"]
model_configs = ["*.json"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
# Local development alternative (uncomment to use a local checkout instead)
# cuvis-ai-core = { path = "../../cuvis-ai-core/cuvis-ai-core", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]
extend-select = [
    "ANN201",
    "ANN202",
    "ANN204",
]
ignore = ["ANN401", "E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore upstream AdaCLIP code
"method/**" = ["ALL"]
"dataset/**" = ["ALL"]
"adaclip_tools/**" = ["ALL"]
"data_preprocess/**" = ["ALL"]
"train.py" = ["ALL"]
"test.py" = ["ALL"]
"app.py" = ["ALL"]
"loss.py" = ["ALL"]
# Relax annotation requirements for tests
"tests/**" = ["ANN201", "ANN202", "ANN204"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-private = false
ignore-property-decorators = false
ignore-semiprivate = false
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "build", "tests", "method", "dataset", "adaclip_tools", "data_preprocess"]
verbose = 1

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests", "build", "dist", "method", "dataset", "adaclip_tools", "data_preprocess"]

[tool.bandit]
exclude_dirs = ["tests", "method", "dataset", "adaclip_tools", "data_preprocess"]
skips = ["B101", "B614"]  # B614: torch.load is required for loading model weights
